AP-310 - Fixed overflow on site list.

--- a/src/Modules/Manage/Dnn.PersonaBar.Sites/Sites.Web/src/_exportables/src/Components/ListView/PortalListItem/style.less
+++ b/src/Modules/Manage/Dnn.PersonaBar.Sites/Sites.Web/src/_exportables/src/Components/ListView/PortalListItem/style.less
@@ -13,7 +13,7 @@
     .portal-main-info {
         border-right: 1px solid @alto;
         .portal-name-info {
-            label {
+            .dnn-text-overflow-wrapper {
                 font-weight: bold;
                 display: block;
                 margin-bottom: 5px;
@@ -23,6 +23,9 @@
                 max-width: 100%;
                 word-wrap: break-word;
                 display: block;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
         }
         &:hover {
