--- a/src/Modules/Manage/Dnn.PersonaBar.Sites/Sites.Web/src/_exportables/src/Components/ListView/style.less
+++ b/src/Modules/Manage/Dnn.PersonaBar.Sites/Sites.Web/src/_exportables/src/Components/ListView/style.less
@@ -1,6 +1,6 @@
 @import "~dnn-global-styles/index";
 :local(.siteList) {
-    display: table;
+    display: block;
     width: 100%;
     box-sizing: border-box;
     .portal-list-container {
